--- a/folioreader/build.gradle
+++ b/folioreader/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 //apply from: '../config/quality/quality.gradle'
 //apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'kotlin-android'
-//apply plugin: 'maven-publish'
+apply plugin: 'maven-publish'
 //apply plugin: 'kotlin-android-extensions'
 
 /*ext {
